[package]
name = "counterbalance"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"

[dependencies]
bevy = "0.10"
bevycheck = "0.5.2"
bevy_mod_picking = "0.12"
rand = "0.8.5"
bevy_prototype_lyon = "0.8.0"

# Enable a small amount of optimization in debug mode
[profile.dev]
opt-level = 1

# Enable high optimizations for dependencies (incl. Bevy), but not for our code:
[profile.dev.package."*"]
opt-level = 3
